salesforce-mcp-package/force-app/main/default/objects/Notification_Broadcast_Event__e/Notification_Broadcast_Event__e.object-meta.xml
<CustomObject>
    <description>High-volume Platform Event used to stream instant real-time top notification bar updates to active user browser sessions.</description>
    <label>Notification Broadcast Event</label>
    <pluralLabel>Notification Broadcast Events</pluralLabel>
</CustomObject>