salesforce-mcp-package/force-app/main/default/objects/Notification_Broadcast_Event__e/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>