salesforce-mcp-package/force-app/main/default/objects/Notification_Broadcast_Event__e/fields/Is_Global__c.field-meta.xml
<CustomField>
    <fullName>Is_Global__c</fullName>
    <label>Is Global</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>