salesforce-mcp-package/force-app/main/default/objects/Notification_Broadcast_Event__e/fields/Notification_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Id__c</fullName>
    <label>Notification Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>